--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="grid-container">
             <div class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 cell">
-                    <h1 class="first-paragraph">24 e 31 dicembre</h1>
+                    <h1 class="first-paragraph">31 dicembre</h1>
                 </div>
             </div>
             <div class="grid-x grid-margin-x grid-margin-y">
