--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
+                    <h4>Lunedì 1 gennaio 2024 siamo chiusi.</h4>
                 </div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 medium-6 cell">
     				<h2>Ristorante</h2>
-    				<!-- <p>Il lunedì non serviamo sushi.</p> -->
+    				<!-- <p>Lunedì 1 gennaio 2024 siamo chiusi.</p> -->
     				<ul class="orari-schedule no-bullet">
     					<li><span>Lunedì:</span><time>19 - 22</time></li>
     					<li><span>Martedì:</span><time>Chiusi</time></li>
