--- a/menu1.html
+++ b/menu1.html
@@ -396,7 +396,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
     								<h3>Peperoncini Piccanti<span class="price ">5,5</span></h3>
-    								<p>Peperoncini ripieni di robiola ricoperti nella pancetta.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
+    								<p>Peperoncini ripieni di robiola, avvolti da pancetta.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -475,7 +475,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/MonsterPiccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hamburger Monster Piccante">
                                     <h3>Monster Piccante<span class="price ">26,9</span></h3>
-                                    <p>450 grammi di carne macinata e cotta alla perfezione, cheddar, peporancini piccanti ripieni di robiala e avvolti in bacon croccante, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <p>450 grammi di carne macinata e cotta alla perfezione, cheddar, peperoncini piccanti ripieni di robiala e avvolti in bacon croccante, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
