--- a/menu.html
+++ b/menu.html
@@ -396,7 +396,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
     								<h3>Peperoncini Piccanti<span class="price ">5,5</span></h3>
-    								<p>Peperoncini ripieni di robiola ricoperti nella pancetta.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
+    								<p>Peperoncini ripieni di robiola, avvolti da pancetta.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
