--- a/menu1.html
+++ b/menu1.html
@@ -459,14 +459,14 @@
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
                 <div class="small-12 cell">
-                    <h2>Hamburger Monster Signature<small>450 grammi di carne spettacolarmente succosa. Hamburger serviti con patate fritte.</small></h2>
+                    <h2>Hamburger Monster<small>450 grammi di carne spettacolarmente succosa. Hamburger serviti con patate fritte.</small></h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-2 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/MonsterDelizioso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hamburger Monter Delizioso">
-                                    <h3>Monster Delizioso<span class="price ">24,9</span></h3>
-                                    <p>450 grammi di carne macinata e cotta alla perfezione, cipolle rosse marinate, insalata croccante, salsa alla McDonald.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <h3>Monster Succulento<span class="price ">25,9</span></h3>
+                                    <p>450 grammi di carne macinata e cotta alla perfezione, cheddar, cipolle rosse in agrodolce, insalata croccante, salsa speciale.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
