--- a/menu1.html
+++ b/menu1.html
@@ -459,7 +459,7 @@
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
                 <div class="small-12 cell">
-                    <h2>Hamburger Monster<small>450 grammi di carne spettacolarmente succosa. Hamburger serviti con patate fritte.</small></h2>
+                    <h2>Monster Succulento<small>450 grammi di carne spettacolarmente succosa. Hamburger serviti con patate fritte.</small></h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-2 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
