--- a/asporto.html
+++ b/asporto.html
@@ -60,7 +60,7 @@
                 
     		</div>
             <div class="small-12 cell callout primary">
-                <p>Nota bene: il 31 dicembre accettiamo ordini fino alle 17:00.</p>
+                <p>Nota bene: il 31 dicembre accettiamo ordini fino alle 18:00. Ultima consegna alle ore 21:00</p>
             </div>
     	</div>
     	<div class="grid-x grid-margin-x">
