--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
+                    <p>Lunedì 1 gennaio 2024 siamo chiusi.</p>
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
