--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     				<section id="fotoMenu" class="splide extra-space-image-tab-home" aria-label="Immagini menù di Ca' Vecchia Beerstrot">
     					<div class="splide__track">
     						<ul class="splide__list grid-margin-y">
+                                <li class="splide__slide"><img src="assets/img/prod/MonsterSucculento_rettangolare.jpg" alt="Monster Hamburger Succulento"></li>
     							<li class="splide__slide"><img src="assets/img/slider/RollGamberoSalmone.jpg" alt="Roll Gambero e Salmone"></li>
     							<li class="splide__slide"><img src="assets/img/slider/HamburgerNorma.jpg" alt="Hamburger Norma"></li>
     							<li class="splide__slide"><img src="assets/img/slider/NigiriSalmone.jpg" alt="Nigiri Salmone"></li>
