--- a/menu.html
+++ b/menu.html
@@ -1117,7 +1117,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Fernet Branca, Brancamenta, Montenegro, Amaro del Capo<span class="price ">3,5</span></h3>
+    								<h3>Fernet Branca, Brancamenta, Montenegro<span class="price ">3,5</span></h3>
     								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
