--- a/menu.html
+++ b/menu.html
@@ -694,7 +694,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema al mascarpone e rhum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema al mascarpone.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
