--- a/informazioni-legali.html
+++ b/informazioni-legali.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informazioni legali | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="La nostra informativa sulla privacy, sui termini e condizioni, sui cookie">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Informazioni Legali, Cookies policy, Termini e Condizioni, Privacy">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2024">
     <link rel="canonical" href="https://www.beerstrot.it/informazioni-legali.html">
