--- a/menu.html
+++ b/menu.html
@@ -1101,7 +1101,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Sibilla, Amaro dell&#x27;Erborista, Anima Nera<span class="price ">4</span></h3>
+    								<h3>Sibilla, Amaro dell&#x27;Erborista, Anima Nera, Amaro del Capo, Sanbuca Molilnari<span class="price ">4</span></h3>
     								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
