--- a/menu.html
+++ b/menu.html
@@ -877,19 +877,27 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
+                                    <h3>Mirabilia<span class="price ">4 | 6 | 12</span></h3>
+                                    <p class="">American Pale Ale 5,2%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
                                     <h3>Carpe Diem<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">IPA senza glutine 5,5%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: --</small></span></p>
                                 </div>
                             </div>
                         </div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Extrema Ratio<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 7,4%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
