--- a/menu.html
+++ b/menu.html
@@ -392,7 +392,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
@@ -400,7 +400,7 @@
     								<p>Peperoncini piccanti ripieni di robiola e avvolti in pancetta.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
