--- a/menu.html
+++ b/menu.html
@@ -845,6 +845,14 @@
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
+                                    <h3>Zona Mugnetti<span class="price ">4 | 6,5 | 13</span></h3>
+                                    <p class="">Belgian Ale 6%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
                                     <h3>Memorandum<span class="price ">4 | 6 | 12</span></h3>
                                     <p class="">California Common Ambrata 5,5%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
@@ -890,14 +898,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Carpe Diem<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">IPA senza glutine 5,5%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: --</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -906,14 +914,14 @@
     							</div>
     						</div>
     					</div> -->
-    				    <!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -970,7 +978,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Mazzu de Fiuri 50cl<span class="price ">6</span></h3>
+    								<h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
@@ -983,14 +991,22 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Tulio 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. Rye IPA 6,5%. Colore dorato intenso. Luppolatura generosa che si fonde alla perfezione con i malti d'orzo e di segale.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Hattori Hanzo 50cl<span class="price ">6</span></h3>
+    								<h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
