--- a/menu.html
+++ b/menu.html
@@ -842,14 +842,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Zona Mugnetti<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">Belgian Ale 6%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
