--- a/menu.html
+++ b/menu.html
@@ -890,14 +890,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Mirabilia<span class="price ">4 | 6 | 12</span></h3>
                                     <p class="">American Pale Ale 5,2%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
