--- a/menu.html
+++ b/menu.html
@@ -850,14 +850,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Memorandum<span class="price ">4 | 6 | 12</span></h3>
                                     <p class="">California Common ambrata 5,5%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
