--- a/menu.html
+++ b/menu.html
@@ -571,7 +571,25 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/FaveePecorino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino">
+                                    <h3>Fave e Pecorino<span class="price ">12,9</span></h3>
+                                    <p>Burger di manzo (180 grammi), pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/FaveePecorinoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino Doppio">
+                                    <h3>Fave e Pecorini Doppio<span class="price ">16,9</span></h3>
+                                    <p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Inverno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Inverno">
@@ -588,7 +606,7 @@
     								<p>Doppio burger di manzo (360 grammi), pecorino vallesina, bacon croccante, erbe di campo strascinate<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
