--- a/asporto.html
+++ b/asporto.html
@@ -124,7 +124,7 @@
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi i Nostri Signature</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
     							<div class="cell">
@@ -193,7 +193,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi Special Mix</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -262,7 +262,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi Selezione di Roll</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -331,7 +331,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi Uramaki Classici</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -400,7 +400,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi Hosomaki</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -469,7 +469,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi Nigiri</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -538,7 +538,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Sushi Kit</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
