--- a/menu.html
+++ b/menu.html
@@ -852,14 +852,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Palmares<span class="price ">4 | 6 | 12</span></h3>
     								<p class="">Red Ale 5,6%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
