--- a/index.html
+++ b/index.html
@@ -68,13 +68,17 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
-                    <!-- <p>Lunedì 1 gennaio 2024 siamo chiusi.</p> -->
+                    <div class="callout success">
+                        <!-- <p>Il lunedì non serviamo sushi.</p> -->
+                        <!-- <p>Lunedì 1 gennaio 2024 siamo chiusi.</p> -->
+                        <p>Martedì 30 Aprile aperti dalle 19 alle 22.</p>
+                        <p>Giovedì 2 Maggio chiusi.</p>
+                    </div>
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 medium-6 cell">
     				<h2>Ristorante</h2>
-    				<!-- <p>Il lunedì non serviamo sushi.</p> -->
     				<ul class="orari-schedule no-bullet">
     					<li><span>Lunedì:</span><time>19 - 22</time></li>
     					<li><span>Martedì:</span><time>Chiusi</time></li>
