--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollSpecialSalmoneFritto_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Special Salmone Fritto">
     								<h3>Roll Special Salmone Fritto<span class="price ">15</span></h3>
-    								<p>Salmone fritto e insalata croccante ricoperti da carpaccio di branzino scottato e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Soia, Senape</small></span></p>
+    								<p>Salmone in panko fritto e insalata croccante ricoperti da carpaccio di branzino scottato e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Soia, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -218,7 +218,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/UramakiPhiladelphia_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Uramaki Philadelphia">
     								<h3>Uramaki Philadelphia<span class="price ">9</span></h3>
-    								<p>Salmone in panko croccante e philadelphia guarniti con salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
+    								<p>Salmone in panko fritto e philadelphia guarniti con salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
