--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -55,6 +55,12 @@
         <div class="grid-x grid-margin-x grid-margin-y">
             <div class="small-12 cell">
                 <h1 class="first-paragraph-no-hero" id="ttitle">Riserva un Tavolo</h1>
+                <div class="callout success">
+                        <!-- <p>Il lunedì non serviamo sushi.</p> -->
+                        <!-- <p>Lunedì 1 gennaio 2024 siamo chiusi.</p> -->
+                        <p>Martedì 30 Aprile aperti dalle 19 alle 22.</p>
+                        <p>Giovedì 2 Maggio chiusi.</p>
+                    </div>
             </div>
         </div>
     </header>
