--- a/asporto.html
+++ b/asporto.html
@@ -56,12 +56,11 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-                <div class="callout success">
-                    <!-- <p>Il lunedì non serviamo sushi.</p> -->
-                    <!-- <p>Lunedì 1 gennaio 2024 siamo chiusi.</p> -->
+                <!-- <div class="callout success">
+                    <p>Il lunedì non serviamo sushi.</p>
+                    <p>Lunedì 1 gennaio 2024 siamo chiusi.</p>
                     <p>Giovedì 2 Maggio chiusi.</p>
-                </div>
-    			<!-- <p>Il lunedì non serviamo sushi.</p> -->
+                </div> -->
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
