--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
-                    <div class="callout success">
-                        <!-- <p>Il lunedì non serviamo sushi.</p> -->
-                        <!-- <p>Lunedì 1 gennaio 2024 siamo chiusi.</p> -->
-                        <p>Giovedì 2 Maggio chiusi.</p>
-                    </div>
+                    <!-- <div class="callout success">
+                        <p>Il lunedì non serviamo sushi.</p>
+                        <p>Lunedì 1 gennaio 2024 siamo chiusi.</p>
+                    </div> -->
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
