--- a/menu.html
+++ b/menu.html
@@ -441,7 +441,7 @@
     			</div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
-    			<!-- <div class="small-12 cell">
+    			<div class="small-12 cell">
     				<h2>Hamburger Monster<small>450 grammi di carne spettacolarmente succosa. Hamburger serviti con patate fritte.</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
@@ -454,7 +454,7 @@
     						</div>
     					</div>
     				</div>
-    			</div> -->
+    			</div>
     			<div class="small-12 cell">
     				<h2>Hamburger Classici<small>Serviti a cottura media e con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
