--- a/account.html
+++ b/account.html
@@ -63,7 +63,7 @@
         <div class="grid-x grid-margin-x grid-margin-y">
             <div class="small-12 medium-6 cell">
                 <h2>I Miei Ordini</h2>
-                <p>Apri un ordine, clicca il pulsante "Metti nel carrello e modifica" (o se vuoi puoi eliminarlo dagli ordini salvati).</p>
+                <p>Apri un ordine, clicca il pulsante "Metti nel carrello e modifica": puoi inviarlo tale e quale o cliccare il pulsante "Ritorna alla spesa" per aggiungere o togliere prodotti.</p>
                 <ul class="accordion" id="carrelli-accordion" data-accordion data-allow-all-closed="true" data-deep-link="true" data-update-history="true" data-deep-link-smudge="true" data-deep-link-smudge-delay="500" data-slide-speed="700">
                 </ul>
             </div>
