--- a/menu.html
+++ b/menu.html
@@ -1001,22 +1001,22 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Mukkeller. America pale ale 6,2%. Corpo leggero, massiccia luppolatura.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
-                        <div class="cell">
+    					</div> -->
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Tulio 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Rye IPA 6,5%. Colore dorato intenso. Luppolatura generosa che si fonde alla perfezione con i malti d'orzo e di segale.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
