--- a/menu.html
+++ b/menu.html
@@ -648,7 +648,25 @@
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/VegetarianoMediterraneo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Mediterraneo">
+                                    <h3>Vegetariano Mediterraneo<span class="price ">12,9</span></h3>
+                                    <p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/VegetarianoAvena_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Avena">
+                                    <h3>Vegetariano Avena<span class="price ">12,9</span></h3>
+                                    <p>Burger di fiocchi d'avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Fagioli">
@@ -656,7 +674,7 @@
     								<p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria.<span class=""><br><small>Allergeni: Glutine, Latte, Soia, Uova</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
