--- a/menu.html
+++ b/menu.html
@@ -675,7 +675,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/VegetarianoQuinoa_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Quinoa">
@@ -684,7 +684,7 @@
     							</div>
     						</div>
     					</div>
-    				</div>
+    				</div> -->
     			</div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="carne" data-magellan-target="carne">
