--- a/menu.html
+++ b/menu.html
@@ -1227,14 +1227,14 @@
     			<div class="small-12 cell">
     				<h2>Rhum</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Centenario 9 anni<span class="price ">6</span></h3>
     								<p class="">Costa Rica 40%. Profumo di vaniglia, cuoio, cioccolato, sciroppo d&#x27;acero e menta. Al palato sentori di cioccolato, pelle, miele e menta piperita.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1303,14 +1303,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Silverback<span class="price ">8</span></h3>
     								<p class="">London Dry Gin con profumi agrumati e floreali; speziato, erbaceo con note dolci di arancia, miele e citronella e sentori di ginepro. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
