--- a/menu.html
+++ b/menu.html
@@ -657,7 +657,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoAvena_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Avena">
@@ -665,7 +665,7 @@
                                     <p>Burger di fiocchi d'avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
