--- a/menu.html
+++ b/menu.html
@@ -998,7 +998,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Forst 0,0% 33cl<span class="price ">4,5</span></h3>
+                                    <h3>Forst 0% 33cl<span class="price ">4,5</span></h3>
                                     <p class="">Birrificio Forst. Zero alcohol dal sapore sorprendente.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
@@ -1311,14 +1311,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Silverback<span class="price ">8</span></h3>
     								<p class="">London Dry Gin con profumi agrumati e floreali; speziato, erbaceo con note dolci di arancia, miele e citronella e sentori di ginepro. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
