--- a/menu.html
+++ b/menu.html
@@ -998,7 +998,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Forst 0% 33cl<span class="price ">4,5</span></h3>
+                                    <h3>Forst Zero 33cl<span class="price ">4,5</span></h3>
                                     <p class="">Birrificio Forst. Zero alcohol dal sapore sorprendente.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
