--- a/menu.html
+++ b/menu.html
@@ -653,7 +653,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoMediterraneo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Mediterraneo">
                                     <h3>Vegetariano Mediterraneo<span class="price ">12,9</span></h3>
-                                    <p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine, Sedano</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -661,7 +661,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoAvena_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Avena">
-                                    <h3>Vegetariano Avena<span class="price ">12,9</span></h3>
+                                    <h3>Vegetariano Delicato<span class="price ">12,9</span></h3>
                                     <p>Burger di fiocchi d'avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape</small></span></p>
                                 </div>
                             </div>
