--- a/menu.html
+++ b/menu.html
@@ -281,7 +281,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiVegetariano_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomaki Vegetariano">
@@ -289,7 +289,7 @@
     								<p>Hosomaki di avocado, cetriolo e mango (8 pezzi).<span class=""><br><small>Allergeni: Soia</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -607,7 +607,7 @@
                                 </div>
                             </div>
                         </div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Deciso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="deciso">
@@ -624,7 +624,7 @@
     								<p>Doppio burger di manzo (360 grammi), gorgonzola, guanciale, pomodorini confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
