--- a/menu.html
+++ b/menu.html
@@ -662,7 +662,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoAvena_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Avena">
                                     <h3>Vegetariano Delicato<span class="price ">12,9</span></h3>
-                                    <p>Burger di fiocchi d'avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape</small></span></p>
+                                    <p>Burger di fiocchi d'avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape, Sedano</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -730,7 +730,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema al mascarpone.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema al mascarpone.<span class=""><br><small>Allergeni: Frutta a Guscio, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
