--- a/menu.html
+++ b/menu.html
@@ -1047,14 +1047,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Poculator 50cl<span class="price ">6</span></h3>
     								<p class="">Rossa tedesca 7,6%. Birrificio Scheyern.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
