--- a/menu.html
+++ b/menu.html
@@ -756,7 +756,7 @@
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Cheesecake_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cheesecake">
-    								<h3>Cheesecake<span class="price ">5</span></h3>
+    								<h3>Cheesecake<span class="price ">5,5</span></h3>
     								<p>Cheesecake in stile new york. Squisitamente dolce, morbida e leggermente acidula.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
@@ -783,8 +783,8 @@
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
-    								<h3>Birramisù<span class="price ">5</span></h3>
-    								<p>Tiramisù con mascarpone artigianale alla birra stout.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
+    								<h3>Birramisù<span class="price ">6</span></h3>
+    								<p>Tiramisù con savoiardi inzuppati in una birra stout. Avvolgente e cremoso.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
