--- a/menu.html
+++ b/menu.html
@@ -731,7 +731,7 @@
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CostineinSalsaBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine in Salsa BBQ">
-    								<h3>Costine in Salsa BBQ<span class="price ">14,9</span></h3>
+    								<h3>Costine BBQ<span class="price ">14,9</span></h3>
     								<p>Baby ribs di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
     							</div>
     						</div>
