--- a/menu.html
+++ b/menu.html
@@ -696,9 +696,9 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <img src="assets/img/prod/VegetarianoAvena_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Avena">
+                                    <img src="assets/img/prod/VegetarianoDelicato_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Delicato">
                                     <h3>Vegetariano Delicato<span class="price ">12,9</span></h3>
-                                    <p>Burger di fiocchi d'avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape, Sedano</small></span></p>
+                                    <p>Burger di fiocchi d&#x27;avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -728,14 +728,14 @@
     				<h2>Carne</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/CostineinSalsaBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine in Salsa BBQ">
-    								<h3>Costine BBQ<span class="price ">14,9</span></h3>
-    								<p>Baby ribs di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
-    							</div>
-    						</div>
-    					</div>
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/CostineBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine BBQ">
+                                    <h3>Costine BBQ<span class="price ">14,9</span></h3>
+                                    <p>Costine di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
