--- a/menu.html
+++ b/menu.html
@@ -741,7 +741,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Entrecote_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Entrecôte">
     								<h3>Entrecôte<span class="price ">19</span></h3>
-    								<p>Entrecôte di Manzetta Red Hereford irlandese.<span class=""><br><small>Allergeni: --</small></span></p>
+    								<p>250 grammi circa di Entrecôte (controfiletto) di manzetta Red Hereford irlandese.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
     					</div>
