--- a/menu.html
+++ b/menu.html
@@ -784,7 +784,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
     								<h3>Birramisù<span class="price ">6</span></h3>
-    								<p>Tiramisù con savoiardi inzuppati in una birra stout. Avvolgente e cremoso.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
+    								<p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
