--- a/menu.html
+++ b/menu.html
@@ -1055,14 +1055,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1079,14 +1079,14 @@
                                 </div>
                             </div>
                         </div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
