--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -131,7 +131,7 @@
     							<div class="card-section">
     								<h3>Mimosa<span class="price ">4&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Savoiardo bagnato ai fiori d’arancio.<br>
-    									Crema chantilly allo zabaione con fragole, pesche e ananas.<br>
+    									Crema chantilly allo zabaione con fragole, pesche e ananas.
     								</p>
     							</div>
     						</div>
@@ -155,7 +155,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Millefoglie<span class="price ">4&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
-    								<p>Sgoglia croccante.<br>
+    								<p>Sfoglia croccante.<br>
     									Crema chantilly con gocce di cioccolato / croccantino / frutti di bosco / fragole.
     								</p>
     							</div>
