--- a/menu.html
+++ b/menu.html
@@ -1080,7 +1080,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Natural Radler 50cl<span class="price ">6</span></h3>
-                                    <p class="">Birrificio Monchshof. Radler 2,5%. Rinfrescante e fruttata con succo di limone naturale.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <p class="">Birrificio M&ouml;nchshof. Radler 2,5%. Rinfrescante e fruttata con succo di limone naturale.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
