--- a/menu.html
+++ b/menu.html
@@ -578,8 +578,8 @@
     								<p>Burger di manzo (180 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
-    					<!-- <div class="cell">
+    					</div>
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepeDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
@@ -629,7 +629,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/California_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="California">
                                     <h3>California<span class="price ">13,4</span></h3>
-                                    <p>Burger di manzo (180 grammi),, cheddar, bacon croccante, salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <p>Burger di manzo (180 grammi), cheddar, bacon croccante, salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -660,7 +660,7 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/FaveePecorino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino">
@@ -677,8 +677,7 @@
                                     <p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
-
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -697,7 +696,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Carbonara_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carbonara">
@@ -716,7 +715,7 @@
     						</div>
     					</div>
     				</div>
-    			</div>
+    			</div> -->
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
