--- a/menu.html
+++ b/menu.html
@@ -714,8 +714,8 @@
     							</div>
     						</div>
     					</div>
-    				</div>
-    			</div> -->
+    				</div> -->
+    			</div>
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -737,25 +737,7 @@
                                 </div>
                             </div>
                         </div>
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Fagioli">
-    								<h3>Vegetariano Fagioli<span class="price ">10,5</span></h3>
-    								<p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria.<span class=""><br><small>Allergeni: Glutine, Latte, Soia, Uova</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/VegetarianoQuinoa_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Quinoa">
-    								<h3>Vegetariano Quinoa<span class="price ">10,5</span></h3>
-    								<p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Latte, Senape, Uova</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div> -->
+                    </div>
     			</div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="carne" data-magellan-target="carne">
@@ -1242,7 +1224,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Ribolla Gialla igt<span class="price ">21 | 5</span></h3>
+    								<h3>Ribolla Gialla igt<span class="price ">22 | 5</span></h3>
     								<p class="">Cantina Branko. Al naso ricorda un bouquet di fiori bianchi. Al palato si evidenzia una giusta sapidità accompagnata dalla tipica acidità del vitigno.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -1561,54 +1543,54 @@
         </footer>
     </div>
     <footer class="panel-footer">
-    	<div class="grid-container">
-    		<div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
-    			<div class="cell">
-    				<h1 class="subheader">Orari</h1>
-    				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 22</time></li>
-    					<li><span>Martedì:</span><time>Chiusi</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
-    					<li><span>Giovedì:</span><time>19 - 22</time></li>
-    					<li><span>Venerdì:</span><time>19 - 22</time></li>
-    					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 22</time></li>
-    				</ul>
-    			</div>
-    			<div class="cell">
-    				<h1 class="subheader">Mappa del Sito</h1>
-    				<ul class="orari-footer-schedule no-bullet">
-    					<li class="item "><a href="index.html">Home</a></li>
-    					<li class=""><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
-    					<li class=""><a href="asporto.html">Ordina da Asporto</a></li>
-    					<li class="attuale"><a href="menu.html">Menù</a></li>
-    					<li class=""><a href="chi-siamo.html">Chi Siamo</a></li>
-    					<li class=""><a class="user-pg-btn">Il Mio Account</a></li>
-    					<li class=""><a href="informazioni-legali.html">Informazioni Legali</a></li>
-    				 </ul>
-    			</div>
-    			<div class="cell">
-    				<h1 class="subheader">Contatti</h1>
-    				<ul class="orari-footer-schedule no-bullet">
-    					<li><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
-    					<li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
-    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
-    				</ul>
-    			</div>
-    			<div class="cell">
-    				<h1 class="subheader">Dove Siamo</h1>
-    				<p>
-    					<a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-    						<span itemprop="streetAddress">Via Centofinestre, 20</span>
-    						<br>
-    						<span itemprop="postalCode">60024</span>
-    						<span itemprop="addressLocality">Filottrano</span>
-    						<span itemprop="addressRegion">AN</span>
-    					</a>
-    				</p>
-    			</div>
-    		</div>
-    	</div>
+        <div class="grid-container">
+            <div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
+                <div class="cell">
+                    <h1 class="subheader">Orari</h1>
+                    <ul class="orari-footer-schedule no-bullet">
+                        <li><span>Lunedì:</span><time>19 - 23</time></li>
+                        <li><span>Martedì:</span><time>19 - 23</time></li>
+                        <li><span>Mercoledì:</span><time>19 - 23</time></li>
+                        <li><span>Giovedì:</span><time>19 - 23</time></li>
+                        <li><span>Venerdì:</span><time>19 - 23</time></li>
+                        <li><span>Sabato:</span><time>19 - 23</time></li>
+                        <li><span>Domenica:</span><time>19 - 23</time></li>
+                    </ul>
+                </div>
+                <div class="cell">
+                    <h1 class="subheader">Mappa del Sito</h1>
+                    <ul class="orari-footer-schedule no-bullet">
+                        <li class="item "><a href="index.html">Home</a></li>
+                        <li class=""><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
+                        <li class=""><a href="asporto.html">Ordina da Asporto</a></li>
+                        <li class=""><a href="menu.html">Menù</a></li>
+                        <li class=""><a href="chi-siamo.html">Chi Siamo</a></li>
+                        <li class=""><a class="user-pg-btn">Il Mio Account</a></li>
+                        <li class=""><a href="informazioni-legali.html">Informazioni Legali</a></li>
+                     </ul>
+                </div>
+                <div class="cell">
+                    <h1 class="subheader">Contatti</h1>
+                    <ul class="orari-footer-schedule no-bullet">
+                        <li><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
+                        <li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
+                        <li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
+                    </ul>
+                </div>
+                <div class="cell">
+                    <h1 class="subheader">Dove Siamo</h1>
+                    <p>
+                        <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                            <span itemprop="streetAddress">Via Centofinestre, 20</span>
+                            <br>
+                            <span itemprop="postalCode">60024</span>
+                            <span itemprop="addressLocality">Filottrano</span>
+                            <span itemprop="addressRegion">AN</span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="assets/js/app.js"></script>
     <script>
