--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -55,9 +55,9 @@
         <div class="grid-x grid-margin-x grid-margin-y">
             <div class="small-12 cell">
                 <h1 class="first-paragraph-no-hero" id="ttitle">Riserva un Tavolo</h1>
-                <!-- <div class="callout success">
-                    <p>Il lunedì non serviamo sushi.</p>
-                </div> -->
+                <div class="callout success">
+                    <p>Il martedì non serviamo sushi.</p>
+                </div>
             </div>
         </div>
     </header>
@@ -497,13 +497,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 22</time></li>
-    					<li><span>Martedì:</span><time>Chiusi</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
-    					<li><span>Giovedì:</span><time>19 - 22</time></li>
-    					<li><span>Venerdì:</span><time>19 - 22</time></li>
+    					<li><span>Lunedì:</span><time>19 - 23</time></li>
+    					<li><span>Martedì:</span><time>19 - 23</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
+    					<li><span>Giovedì:</span><time>19 - 23</time></li>
+    					<li><span>Venerdì:</span><time>19 - 23</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 22</time></li>
+    					<li><span>Domenica:</span><time>19 - 23</time></li>
     				</ul>
     			</div>
     			<div class="cell">
