--- a/menu.html
+++ b/menu.html
@@ -932,14 +932,22 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Thee Bitter<span class="price ">4 | 6,5 | 13</span></h3>
+                                    <p class="">Bitter inglese ambrata 4,5%. Birrificio Resina.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Palmares<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Red Ale 5,6%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -988,6 +996,14 @@
     							</div>
     						</div>
     					</div>
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Californication<span class="price ">4 | 6,5 | 13</span></h3>
+                                    <p class="">West Coast IPA 6,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
