--- a/menu.html
+++ b/menu.html
@@ -724,7 +724,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoMediterraneo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Mediterraneo">
                                     <h3>Vegetariano Mediterraneo<span class="price ">12,9</span></h3>
-                                    <p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine, Sedano</small></span></p>
+                                    <p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine, Sedano, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -733,7 +733,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoDelicato_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Delicato">
                                     <h3>Vegetariano Delicato<span class="price ">12,9</span></h3>
-                                    <p>Burger di fiocchi d&#x27;avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape</small></span></p>
+                                    <p>Burger di fiocchi d&#x27;avena e verdure (cipolle, cavolo riccio, spinaci, broccoli, scalogno), cipolla caramellata, insalata; composta di rape rosse, senape e miele.<span class=""><br><small>Allergeni: Glutine, Senape, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
